// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widget should render the Widget component 1`] = `
<div>
  <article
    class="svelte-pntwh0"
  >
     
  </article>
</div>
`;

exports[`Widget should render the Widget component with loading spinner 1`] = `
<div>
  <article
    class="svelte-pntwh0"
  >
    <div
      class="spinner-container svelte-wkqaim"
      style="--z-index: 10;"
    >
      <div
        class="spinner dot-0 svelte-wkqaim"
      />
      <div
        class="spinner dot-1 svelte-wkqaim"
      />
      <div
        class="spinner dot-2 svelte-wkqaim"
      />
    </div>
     
  </article>
</div>
`;
